add post about how the blog works

--- a/content/index.org
+++ b/content/index.org
@@ -8,3 +8,4 @@ hi i'm luke - this is my blog
 - [[file:dft.org][discrete fourier transform]]
 - [[file:ring-modulation.org][ring modulation and frequency shifting]]
 - [[file:aes-encryption.org][aes encryption]]
+- [[file:how-this-blog-works.org][how this blog works]] 
