add link to simple flashcards

--- a/content/index.org
+++ b/content/index.org
@@ -10,3 +10,4 @@ hi i'm luke - this is my blog
 - [[file:aes-encryption.org][aes encryption]]
 - [[file:how-this-blog-works.org][how this blog works]] 
 - [[file:networking-in-lisp.org][tcp sockets in common lisp]]
+- [[https://larzeitlin.github.io/simple-flashcards][simple flashcards]]
