--- a/content/scittle-hilbert-curve.org
+++ b/content/scittle-hilbert-curve.org
@@ -24,7 +24,7 @@ A [[http://en.wikipedia.org/wiki/Hilbert_curve][Hibert Curve]] is a space-fillin
 [[file:images/HC-3-iterations.png]]
 
 * what is scittle?
-[[https://github.com/babashka/scittle][Scittle]] is is a small Clojure interpreter designed to be embedded inside web pages using js ~<script>~ tags. For example to evaluate code input by the user.
+[[https://github.com/babashka/scittle][Scittle]] is is a small Clojure interpreter designed to be embedded inside web pages using html ~<script>~ tags. For example to evaluate code input by the user.
 
 ** Aside
 It's great how simple Scittle is to use inside this blog. I'm writing in an [[https://orgmode.org][org file]] in Emacs. I embed some script tags in a [[https://orgmode.org/manual/Quoting-HTML-tags.html][export block]]. Like so:
@@ -333,7 +333,7 @@ Okay, now we would like to iterate that, each time concatenating the results int
 ;    {:cell (3 0), :pattern :A})
 #+end_src
 
-Lovely. Okay we don't care about the patterns any more once we have finished iterating, but we do want co change from cells to points on the canvas. Let's grab the ordered cells and use the canvas dimensions to turn them into points.
+Lovely. Okay we don't care about the patterns any more once we have finished iterating, but we do want to change from cells to points on the canvas. Let's grab the ordered cells and use the canvas dimensions to turn them into points.
 
 #+begin_src clojure
 (defn cells->points [cells iterations canvas-width]
