i ching link interpretations

--- a/content/i-ching.org
+++ b/content/i-ching.org
@@ -183,3 +183,9 @@ We are going to make various piles of stalks. I will refer to these with single 
 
 
 
+* Meanings
+The general idea seems to be the transition from the first to the second hexagram. (Book of Changes, remember) You can look up the symbols and contemplate their interpretations here:
+
+[[http://www2.unipr.it/~deyoung/I_Ching_Wilhelm_Translation.html][Wilhelm Translation]]
+
+cba to scrape the symbol names / interpretations to put inline here right now. Maybe will come back and do that later... xx 
