--- a/content/i-ching.org
+++ b/content/i-ching.org
@@ -59,7 +59,8 @@ We are going to make various piles of stalks. I will refer to these with single 
 14. Sum the values of ~result-a~, ~result-b~ and ~result-c~. This will be ether 6, 7, 8 or 9. This represents the selected bottom line. 
 15. Gather all the stalks apart from the one removed in step 2. Repeat steps 3 to 14 for each of the remaining 5 lines (ascending).
 
-
+** Implementation Notes
+The algorithm explained above is implemented here in ClojureScript using Scittle to run it in the browser. The code is editable do feel free to tweak it and play around with it. Pseudo-randomness is added at the approx half splitting point in step 3. To make this somewhat realistic we will sample randomly from a normal distribution using a Box-Muller transform, and then round to the nearest integer to create an offset to the split.
 
 #+begin_export html
 <script type="application/x-scittle">
@@ -73,8 +74,6 @@ We are going to make various piles of stalks. I will refer to these with single 
   (-> (js/document.getElementById output-id)
       (.-src)
       (set! v)))
-
-
 
 (defn try-eval [v]
   (try (js/scittle.core.eval_string v)
@@ -105,10 +104,18 @@ We are going to make various piles of stalks. I will refer to these with single 
 <body>
 <textarea id="code-area"
           style="font-family:monospace;height:400px;">
+(defn rand-normal
+  []
+  (let [u1 (Math/random)
+        u2 (Math/random)
+        z0 (Math/sqrt (* -2.0 (Math/log u1))) 
+        z1 (* z0 (Math/cos (* 2.0 Math/PI u2)))]
+    (Math/round (+ 0 (* 3 z1)))))
+
 (defn split-stalks [stalks]
   (let [approx-half (-> (count stalks)
                          (/ 2)
-                         (+ (rand-int 4)))]
+                         (+ (rand-normal)))]
     [(take approx-half stalks)
      (drop approx-half stalks)]))
 
@@ -180,7 +187,6 @@ We are going to make various piles of stalks. I will refer to these with single 
 </p>
 </body>
 #+end_export
-
 
 
 * Meanings
