--- a/content/index.org
+++ b/content/index.org
@@ -12,5 +12,5 @@ hi i'm luke - this is my blog
 - [[https://larzeitlin.github.io/simple-flashcards][simple flashcards]]
 - [[file:scittle-hilbert-curve.org][scittle hilbert curve]]
 - [[file:i-ching.org][i ching]]
-- [[http://www.lzeitlin.xyz/lzboard/][habit tracker]]
+- [[http://www.lzeitlin.xyz/octohabit/][habit tracker]]
 - [[file:monads-python.org][monads in python]]
