--- a/content/index.org
+++ b/content/index.org
@@ -14,3 +14,4 @@ hi i'm luke - this is my blog
 - [[file:i-ching.org][i ching]]
 - [[http://www.lzeitlin.xyz/octohabit/][habit tracker]]
 - [[file:monads-python.org][monads in python]]
+- [[http://www.lzeitlin.xyz/laranjas/][particle system]]
